feat: Add DbContext and apply migration

--- a/backend/backend/appsettings.Development.json
+++ b/backend/backend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TodoListConnection": "Server=DESKTOP-5QQG7I2\\SQLEXPRESS;Database=TodoList;Integrated Security=True;TrustServerCertificate=True"
   }
 }
