--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoListConnection": "{Configure in appsettings.Development.json}"
+  }
 }
